@@ -1,4 +1,5 @@
 Version 1.1.3
+- Added plotMeanCoverage
 - Fixed bug in gini for method with no chromosome lengths
 Version 1.1.2
 - Add methods for objects of class GRanges and GRangesList.
